update some detailed information
